--- a/css/cross-style.css
+++ b/css/cross-style.css
@@ -29,14 +29,15 @@ body{
 
 .widget-wrapper{
     display: flex;
-    background-color: var(--gray-900);
+    background-color: var(--gray-950);
     flex-direction: column;
     align-content: flex-start;
+    border: solid 1px var(--gray-700);
 }
 
 .heading-wrapper{
     padding: var(--widget-padding);
-    border-bottom: solid 1px var(--gray-600);
+    border-bottom: solid 1px var(--gray-700);
 }
 
 .content-wrapper{
@@ -63,7 +64,7 @@ body{
 .input-std{
     width: 100%;
     height: 2.75rem;
-    background-color: var(--gray-950);
+    background-color: var(--gray-900);
     padding: 0 1rem 0 1rem;
     border: solid 1px var(--gray-600); 
     color: white;
