--- a/css/cross-style.css
+++ b/css/cross-style.css
@@ -9,6 +9,7 @@
     padding: 0px;
     border: none;
     outline: none;
+    box-sizing: border-box;
 }
 
 body{
@@ -23,16 +24,18 @@ body{
 .main-grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto;
+    grid-template-rows: 600px;
     gap: 2rem;
 }
 
 .widget-wrapper{
     display: flex;
+    height: 480px;
     background-color: var(--gray-950);
     flex-direction: column;
-    align-content: flex-start;
+    justify-content: flex-start;
     border: solid 1px var(--gray-700);
+    flex-wrap: nowrap;
 }
 
 .heading-wrapper{
@@ -42,12 +45,19 @@ body{
 
 .content-wrapper{
     padding: var(--widget-padding);
+    height: 100%;
 }
 
 .input-wrapper{
     display: flex;
     flex-direction: row;
     column-gap: 12px;
+    margin: 0 0 var(--widget-padding) 0;
+}
+
+.div-test{
+    background-color: brown;
+    height: 100%;
 }
 
 /* ----------------------------*/
