--- a/css/prefab.css
+++ b/css/prefab.css
@@ -2,13 +2,12 @@
     display: none;
     flex-direction: column;
     justify-content: center;
-    height: auto;
-    box-sizing: border-box;
     padding: 32px 0 32px 0;
     border: solid 1px var(--red-400);
+    flex: 1;
 }
 
 .error-message {
     text-align: center;
-    color: var(--red-400)
+    color: var(--red-400);
 }
