--- a/css/weather-style.css
+++ b/css/weather-style.css
@@ -1,14 +1,6 @@
-
-.search-wrapper {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
 .weather-info-wrapper {
-    display:block;
-    display:none;
+    display:flex; /* TODO: revert do display none */
+    flex-direction: row;
 }
 
 .City-InputField {
@@ -44,13 +36,22 @@
 
 /* DETAILS -------------------- */
 
-
-.Details-Wrapper {
+.left-weather-split{
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 60px;
+    flex-direction: column;
+    justify-content: left;  
+    width: 40%;
+    flex: 1;
+    align-items: stretch;
 }
+
+.right-weather-split{
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+}
+
+
 
 .DataColumn {
         display: flex;
