fixed left and right weather slip layout

--- a/css/cross-style.css
+++ b/css/cross-style.css
@@ -48,6 +48,8 @@ body{
 }
 
 .content-wrapper{
+    display: flex;
+    flex-direction: column;
     padding: var(--widget-padding);
     height: 100%;
 }
