--- a/css/weather-style.css
+++ b/css/weather-style.css
@@ -1,103 +1,93 @@
 .weather-info-wrapper {
-    display:flex; /* TODO: revert do display none */
-    flex-direction: row;
-    height: 100%;
+	display: none;
+	flex-direction: row;
+	height: 100%;
 }
 
-.City-InputField {
-    border: 0;
-    outline: 0;
-    background: #fff;
-    color: #555;
-    padding: 10px 25px;
-    height: 60px;
-    border-radius: 12px;
-    flex: 1;
-    margin-right: 16px;
-    font-size: 18px;
-}
+/*------------------------*/
+/*----- LEFT WRAPPER -----*/
+/*------------------------*/
 
-/* TEMPERATURE -------------------- */
+.left-weather-split {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	align-items: flex-start;
+	justify-content: space-between;
+	width: 50%;
+	flex: 1;
+	border-right: solid 1px var(--gray-700);
+	padding: 0 var(--widget-padding) 0 0;
+}
 
 .weather-icon {
-    max-width: 160px;
-    width: 100%;
-    margin-left: -12px;
-}
-
-.Temperature-H1 {
-    font-size: 60px;
-    font-weight: 800;
+	max-width: 160px;
+	width: 100%;
+	margin-left: -12px;
 }
 
 .weather-city {
-    font-size: 24px;
-    font-weight: 600;
+	font-size: 32px;
+	font-weight: 600;
 }
 
-/* DETAILS -------------------- */
+/*-------------------------*/
+/*----- RIGHT WRAPPER -----*/
+/*-------------------------*/
 
-.left-weather-split{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    align-items: flex-start;  
-    justify-content: space-between;
-    width: 50%;
-    flex: 1;
-    border-right: solid 1px var(--gray-700);
-    padding: 0 var(--widget-padding) 0 0;
+.right-weather-split {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: space-between;
+	padding: 0 0 0 var(--widget-padding);
 }
 
-.right-weather-split{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0 0 0 var(--widget-padding)
+.temperature-value {
+	color: var(--gray-100);
+	font-size: 32px;
+	font-weight: 800;
 }
 
-
-
-.DataColumn {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        width: 120px;
+.weather-data-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+	row-gap: 4px;
 }
 
-.Wind-Image{
-    width: 40px;
-    margin: 0 0 16px 0;
+.weather-label-wrapper {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	height: 32px;
+	justify-content: start;
+	column-gap: 4px;
 }
 
-.Humidity-Image{
-    width: 40px;
-    margin: 4px 0 12px 0;
+.Humidity-Label {
+	font-size: 12px;
+	font-weight: 400;
+	letter-spacing: 4px;
+	color: var(--gray-500);
+	height: 12px;
 }
 
-.Humidity-Label{
-    font-size: 12px;
-    font-weight: 400;
-    letter-spacing: 4px;
+.Humidity-Value {
+	font-size: 20px;
+	font-weight: 700;
+	color: var(--gray-300);
 }
 
-.Humidity-Value{
-    font-size: 26px;
-    font-weight: 700;
+.Wind-Label {
+	font-size: 12px;
+	font-weight: 400;
+	letter-spacing: 4px;
+	color: var(--gray-500);
 }
 
-.Wind-Label{
-    font-size: 12px;
-    font-weight: 400;
-    letter-spacing: 4px;
+.Wind-Value {
+	font-size: 20px;
+	font-weight: 700;
+	color: var(--gray-300);
 }
-
-.Wind-Value{
-    font-size: 26px;
-    font-weight: 700;
-}
-
-
-
-
