--- a/css/quiz-style.css
+++ b/css/quiz-style.css
@@ -27,6 +27,15 @@ h1{
     margin: 0 0 32px 0;
 }
 
+.question-progression{
+    color: var(--gray-100);
+}
+
+.question-text{
+    font-size: 20px;
+    color: var(--gray-100);
+}
+
 /* buttons styling -------------------------------------------------------------------------------- */
 
 .standard-button{
