refactor quiz widget footer layout

--- a/css/global-variables.css
+++ b/css/global-variables.css
@@ -17,12 +17,14 @@
 
 	--red-300: #fca5a5;
 	--red-400: #f87171;
+	--red-950: #431407;
 
 	--yellow-300: #fde047;
 	--yellow-400: #facc15;
 
 	--lime-300: #bef264;
 	--lime-400: #a3e635;
+	--lime-950: #1a2e05;
 
 	--blue-300: #93c5fd;
 	--blue-400: #60a5fa;
