refactor font size in weather widget

--- a/css/quiz-style.css
+++ b/css/quiz-style.css
@@ -13,8 +13,9 @@
 }
 
 .question-text{
-    font-size: 16px;
+    font-size: 1rem;
     color: var(--gray-100);
+    line-height: 1.25rem;
 }
 
 .answer-btn{
@@ -46,7 +47,7 @@
 #answers-wrapper-id .incorrect-status{
     background-color: var(--red-950);
     border-color: var(--red-400);
-    
+
 }
 .quiz-footer{
     display: flex;
@@ -57,6 +58,8 @@
 }
 
 .question-progression{
-    color: var(--gray-100);
+    color: var(--gray-500);
+    font-size: 1rem;
+    line-height: 1.25rem;
 }
 
