--- a/css/cross-style.css
+++ b/css/cross-style.css
@@ -106,6 +106,7 @@ border: solid 1px var(--violet-500);
     color: white;
     padding: 0 1.5rem 0 1.5rem;
     font-size: 1rem;
+    line-height: 1.25rem;
     font-weight: 400;
 }
 
