refactor final screen logi in quiz widget

--- a/css/quiz-style.css
+++ b/css/quiz-style.css
@@ -12,6 +12,11 @@
     margin-top: var(--widget-padding);;
 }
 
+.final-score{
+    display: none;
+    color: white;
+}
+
 .question-text{
     font-size: 1rem;
     color: var(--gray-100);
