--- a/css/cross-style.css
+++ b/css/cross-style.css
@@ -56,7 +56,9 @@ body{
 
 .input-wrapper{
     display: flex;
+    position: relative;
     flex-direction: row;
+    align-items: center;
     column-gap: 12px;
     margin: 0 0 var(--widget-padding) 0;
 }
@@ -122,6 +124,13 @@ border: solid 1px var(--violet-500);
 
 .btn-std:hover{
     background-color: var(--violet-500);
+}
+
+.btn-underlined{
+    color: var(--violet-600);
+    font-size: 1rem;
+    font-weight: 600;
+    text-decoration: underline;
 }
 
 /* ---------------------------*/
