--- a/css/cross-style.css
+++ b/css/cross-style.css
@@ -131,6 +131,7 @@ border: solid 1px var(--violet-500);
     font-size: 1rem;
     font-weight: 600;
     text-decoration: underline;
+    background-color: transparent;
 }
 
 /* ---------------------------*/
