--- a/css/calculator-style.css
+++ b/css/calculator-style.css
@@ -13,14 +13,24 @@
     row-gap: 12px;
 }
 
-.calculator-btn-grid .btn-border{
+.calculator-btn-grid .btn-dark{
     height: auto;
     font-size: 1rem;
-    font-weight: 600;
 }
 
 .calculator-btn-grid .btn-std{
     height: auto;
     font-size: 1rem;
-    font-weight: 600;
+}
+
+.calculator-input{
+    width: 100%;
+    height: 2.75rem;
+    text-align: end;
+    background-color: transparent;
+    font-size: 2rem;
+    padding: 0 0 0 0;
+    border: none; 
+    color: white;
+    font-weight: 400;
 }
