--- a/css/cross-style.css
+++ b/css/cross-style.css
@@ -112,6 +112,16 @@ border: solid 1px var(--violet-500);
     font-weight: 400;
 }
 
+.btn-dark{
+    height: 2.75rem;
+    background-color: var(--gray-800);
+    color: white;
+    padding: 0 1.5rem 0 1.5rem;
+    font-size: 1rem;
+    line-height: 1.25rem;
+    font-weight: 400;
+}
+
 .btn-border{
     height: 2.75rem;
     background-color: transparent;
@@ -149,6 +159,7 @@ h2{
     color: white;
     font-size: 2rem;
     line-height: 2rem;
+    font-weight: 700;
 }
 
 /* ---------------------------*/
